Turned off doxygen preprocessing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ set(DOXYGEN_CALL_GRAPH YES)
 set(DOXYGEN_GENERATE_LATEX YES)
 set(DOXYGEN_USE_PDFLATEX YES)
 set(DOXYGEN_PDF_HYPERLINKS YES)
-set(DOXYGEN_ENABLE_PREPROCESSING YES)
+set(DOXYGEN_ENABLE_PREPROCESSING NO)
 
 
 
