Wrote function to free the whole tree with tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,3 +31,4 @@ add_library(generichelper SHARED
         linked_list.h
         accelerations.c
         accelerations.h)
+add_subdirectory(tests)
